--- a/docker-images/syntax-highlighter/crates/sg-syntax/Cargo.toml
+++ b/docker-images/syntax-highlighter/crates/sg-syntax/Cargo.toml
@@ -40,6 +40,8 @@ tree-sitter-sql = { git = "https://github.com/sourcegraph/tree-sitter-sql" }
 tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp" }
 
 tree-sitter-jsonnet = { git = "https://github.com/sourcegraph/tree-sitter-jsonnet" }
+unicode-width = "0.1.9"
 
 [dev-dependencies]
 insta = "1.11.0"
+pretty_assertions = "1.2.1"
