--- a/docker-images/syntax-highlighter/crates/sg-syntax/Cargo.toml
+++ b/docker-images/syntax-highlighter/crates/sg-syntax/Cargo.toml
@@ -41,6 +41,7 @@ tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-shar
 
 tree-sitter-jsonnet = { git = "https://github.com/sourcegraph/tree-sitter-jsonnet" }
 unicode-width = "0.1.9"
+once_cell = "1.13.0"
 
 [dev-dependencies]
 insta = "1.11.0"
